--- a/index.html
+++ b/index.html
@@ -15,18 +15,29 @@
 		<style>
 			body {
 				background-color: hsl(220, 15%, 55%);
+				min-height: 100vh;
+				display: flex;
+				flex-direction: row;
+				justify-content: center;
+				align-items: center;
+				margin: 0;
+			}
+
+			p {
+				font-size: 15px;
+				font-family: "Outfit", sans-serif;
+				text-align: center;
+				color: hsl(212, 45%, 89%);
+			}
+			h1 {
+				font-family: "Outfit", sans-serif;
+				text-align: center;
 			}
 			.attribution {
-				margin: auto;
-				margin-top: 10%;
-				font-size: 11px;
-				text-align: center;
-				justify-content: center;
-				width: 350px;
-				height: 550px;
 				background-color: hsl(0, 0%, 100%);
 				border-radius: 15px;
 				border: 5px solid white;
+				width: 350px;
 			}
 
 			.content {
@@ -45,30 +56,16 @@
 				margin: 15px 30px;
 				font-weight: 700;
 			}
-
-			p {
-				font-size: 15px;
-				font-family: "Outfit", sans-serif;
-				text-align: center;
-				color: hsl(212, 45%, 89%);
-			}
-			h1 {
-				font-family: "Outfit", sans-serif;
-				text-align: center;
-			}
-			/* .attribution a {
-				color: hsl(228, 45%, 44%);
-			} */
 		</style>
 	</head>
 	<body>
 		<div class="attribution">
-			<div class="content">
-				<img src="./images/image-qr-code.png" />
+			<article class="content">
+				<img src="./images/image-qr-code.png" alt="qrcode" />
 				<h1 class="text-content">Improve your front-end skills by building projects</h1>
 				<p class="text-content">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level Challenge by</p>
 				<!-- <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>. -->
-			</div>
+			</article>
 		</div>
 	</body>
 </html>
