change px to rem

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			}
 
 			p {
-				font-size: 15px;
+				font-size: 0.938rem;
 				font-family: "Outfit", sans-serif;
 				text-align: center;
 				color: hsl(212, 45%, 89%);
@@ -35,9 +35,9 @@
 			}
 			.attribution {
 				background-color: hsl(0, 0%, 100%);
-				border-radius: 15px;
+				border-radius: 0.938rem;
 				border: 5px solid white;
-				width: 350px;
+				width: 21.875rem;
 			}
 
 			.content {
@@ -46,10 +46,10 @@
 				align-items: center;
 			}
 			img {
-				height: 330px;
-				width: 330px;
-				margin-top: 10px;
-				border-radius: 15px;
+				height: 20.625rem;
+				width: 20.625rem;
+				margin-top: 0.625rem;
+				border-radius: 0.938rem;
 			}
 
 			.text-content {
