--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 		<style>
 			body {
-				background-color: hsl(220, 15%, 55%);
+				background-color: #d5e1ef;
 				min-height: 100vh;
 				display: flex;
 				flex-direction: row;
@@ -59,13 +59,13 @@
 		</style>
 	</head>
 	<body>
-		<div class="attribution">
+		<main class="attribution">
 			<article class="content">
 				<img src="./images/image-qr-code.png" alt="qrcode" />
 				<h1 class="text-content">Improve your front-end skills by building projects</h1>
 				<p class="text-content">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level Challenge by</p>
 				<!-- <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>. -->
 			</article>
-		</div>
+		</main>
 	</body>
 </html>
